Recent changes
-214    Fixed external restraints with Kabsch fit
-213    Added fragment fit with Kabsch algorithm instead of FRAG/FEND fit. This runs much faster for large structures. 
        This version might be unstable and not all features are suported, but regular fragment fit with or without 
        RESIdues and PARTs work.
-212    Fixed SFAC with exponential parameters. Teflat fragment added. Added Trifluorbenzene. 
-211    More fragments: Dimethyl ammonium, tert-Butyl isocyanide, improved replace mode.
-210    Added check for DFIX/DANG if the d value is larger than the sigma (as it should be). DSR now ignores
        fragments that do not contain atoms. Less output during fragment fit (wR2 and Gof were useless).
        Fixed line endings in start script. This should fix updates on Unix systems.
-209    Added 4,4'-Di-tert-butyl-2,2'-bipyridine and TEMPO fragments, users manual updated esp. residues
        chapter, optimized restraints, fixed Acetonitrile restraints (why did nobody noticed this?).
-208    Changed self-update process to be secured by checksums and ssl.
-207    When using residues, DSR will now introduce a SAME_name 'first atom' > 'last atom'
        to the list of restraints. First/last atom means first and last atom from the
        respective fragment. This will make distances in all residues more consisten but should
        do no harm.
        Restructured dbfile.py a lot. Acess to the text database is now clearer and the parser
        easyer to read.
-206    Added Thiophen and 1,2,3,4-Tetrafluorobenzene.
-205    Added SO2. Added full SHELXL-2017/1 compatibility (Except for chain IDs). Fixed
        restraints in acetonitrile.
-204    Added Methyl tert-butyl ether to the DB. Small fix for CF3 groups. Refractured
        some code.
-203    Added logfile 'dsr-log.lst' to dsr output. Every last dsr run is now in the
        'dsr-log.lst' file. Improved detection of already used restraints. The standard